Get Involved Page Dark Mode Fix

--- a/css/get-involved_change.css
+++ b/css/get-involved_change.css
@@ -130,7 +130,7 @@
   max-height: 0;
   padding: 0 1em;
   color: #2c3e50;
-  background: white;
+  
   transition: all 0.35s;
 }
 .tab-close {
